--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,30 +3,16 @@
   {{- partial "head.html" . -}}
   <body>
     {{- partial "header.html" . -}}
-    <div class="container-fluid" style="margin-top:35px";>
-    <!--  page title -->
-    <div class="row">
-      <div class="col-md-2">
-        <!-- What should be here -->
+    <div class="container-fluid" style="margin-top:25px;">
+      <div class="row">
+        <div class="col-md-2">
+          {{- partialCached "navmenu.html" . -}}
+        </div>
+        <div class="col-md-6">
+          {{- block "main" . }}{{- end }}
+        </div>
+        {{- partialCached "footer.html" . -}}
       </div>
-      <div class="col-md-7">
-        <h1>{{ .Title }}</h1>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-md-2">
-        {{- partial "navmenu.html" . -}}
-      </div>
-
-      <div class="col-md-7"> <!-- main content -->
-        {{- block "main" . }}{{- end }}
-      </div>
-
-      <div class="col-md-2">
-      </div>
-    </div>
-    {{- partial "footer.html" . -}}
     </div>
   </body>
 </html>
