--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
-<script src="/static/fossix.js"></script>
+<script src="/fossix.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
@@ -10,13 +10,13 @@
     <div class="mx-auto">
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-link text-muted" href="#">About</a>
+          <a class="nav-link text-muted" href="/about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-muted" href="/static/contact/">Contact</a>
+          <a class="nav-link text-muted" href="/contact/">Contact</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-muted" href="/static/privacy/">Privacy Policy</a>
+          <a class="nav-link text-muted" href="/privacy/">Privacy Policy</a>
         </li>
       </ul>
     </div>
@@ -28,3 +28,7 @@
     </div>
   </div>
 </div>
+
+{{ range site.Params.custom_js }}
+<script async src="{{ relURL (.) }}"></script>
+{{ end }}
