--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,7 +15,7 @@
     <h3>{{ .Title }}</h3>
   </a>
   <p class="lead">
-    {{ .Summary | truncate 250}}
+    {{ .Summary }}
     <a href="{{ .Permalink }}" class="float-right">
       More &rarr;
     </a>
