--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,10 +5,9 @@
     {{- partial "header.html" . -}}
     <div class="container-fluid" style="margin-top:25px;">
       <div class="row">
-        <div class="col-md-2">
-          {{- partialCached "navmenu.html" . -}}
+        <div class="col-lg-3">
         </div>
-        <div class="col-md-6">
+        <div class="col-lg-6 content">
           {{- block "main" . }}{{- end }}
         </div>
         {{- partialCached "footer.html" . -}}
