Add a series and related posts in the sidebar
Signed-off-by: Santosh Sivaraj <santosh@fossix.org>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,10 +6,15 @@
     <div class="container-fluid" style="margin-top:25px;">
       <div class="row">
         <div class="col-lg-3">
+          {{ block "sidebar" . }}{{ end }}
         </div>
         <div class="col-lg-6 content">
           {{- block "main" . }}{{- end }}
         </div>
+        <div class="col-lg-3">
+          {{ block "rsidebar" . }}{{ end }}
+        </div>
+
         {{- partialCached "footer.html" . -}}
       </div>
     </div>
