--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -17,7 +17,9 @@
   <span class="badge"> </span>
 </div>
 
+<div class="content">
 {{ .Content }}
+</div>
 
 <!-- List other pages in this series -->
 {{ $series_name := .Params.series }}
