--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,7 +8,7 @@
         <div class="col-lg-3">
           {{ block "sidebar" . }}{{ end }}
         </div>
-        <div class="col-lg-6 content">
+        <div class="col-lg-6">
           {{- block "main" . }}{{- end }}
         </div>
         <div class="col-lg-3">
