--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <a class="navbar-brand" href="/">
-    <img src="/site-logo.png" width="40" height="45"
-         class="d-inline-block align-top" alt="">
     <span class="front-site-title">{{ .Site.Title }}</span>
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,7 +7,7 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav ml-auto">
       {{ range $idx, $category := .Site.Params.categories }}
       <li class="nav-item">
         <a href="{{ "categories/" | relURL }}{{$category | urlize }}" class="nav-link">
